--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,20 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.0.1
+  freezed_annotation: ^2.0.3
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: ^2.1.11
   flutter_lints: ^2.0.0
+  freezed: ^2.0.3+1
+  injectable_generator: ^1.5.3
 
 flutter:
   uses-material-design: true
