--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,21 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  exclude:
+    # Generated code
+    - 'lib/**.config.dart'
+    - 'lib/**.g.dart'
+    - 'lib/**.freezed.dart'
+    - 'lib/**.graphql.dart'
+    - 'lib/**.gen.dart'
+    - 'lib/generated_plugin_registrant.dart'
+    - 'lib/pigeon.dart'
+    # Web
+    - 'web/**'
+    # Build
+    - 'build/**'
+    # Assets
+    - 'assets/**'
+
 linter:
   rules:
